[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
edition = "2018"
name = "memestat"
version = "0.1.0"

[dependencies]
average = "*"
color-eyre = "*"
derive_more = "*"
eyre = "*"
mathru = "*"
plotters = "*"
pretty_env_logger = "*"
rand = "*"
rand_distr = "*"
rayon = "*"
smallvec = "*"
