[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
description = "stats library"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "memestat"
repository = "https://github.com/Edgeworth/memestat"
version = "0.1.0"

[dependencies]
average = "0.16.0"
derive_more = {version = "2.0.1", features = ["display"]}
eyre = "0.6.12"
mathru = "0.16.1"
rand = "0.9.2"
